Fix login button vanishing on narrow screens

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/login.scss
@@ -43,7 +43,7 @@ body {
   
      .login-button {
        border-radius: 10px;
-       width: 35%;
+       min-width: 50%;
      }
   }
 
